# allianceauth-alt-manager

./: .flake8  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
altmanager/: __init__.py  admin.py  api.py  app_settings.py  apps.py  auth_hooks.py  helpers.py  managers.py  models.py  providers.py  schema.py  tasks.py  urls.py  views.py
altmanager/cogs/: alt_manager.py
altmanager/management/commands/: am_check_all.py
altmanager/migrations/: 0001_initial.py  0002_alter_altmanagerconfiguration_options.py  0003_alter_altmanagerconfiguration_options_altcorprecord.py  0004_altmanagerconfiguration_days_before_revoke_and_more.py  0005_altcorprecord_actual_members.py  0006_alter_altcorprecord_approver_character_name_and_more.py  0007_remove_altcorprecord_approver_and_more.py  0008_alter_altcorphistory_request.py  0009_alter_altmanagerconfiguration_options_and_more.py  0010_alter_altmanagerconfiguration_member_corps_and_more.py  0011_altcorptarget_altcorphistory_target.py  0012_altcorptarget_description.py  0013_alter_altmanagerconfiguration_management_channel_id.py  0014_maininmembercorpfilter.py  0015_altcorptarget_allow_non_members.py  0016_altcorptarget_last_step_text.py  0017_altrecord_alter_altcorphistory_approver_and_more.py  0018_altmanagerconfiguration_member_alliances.py
altmanager/static/altmanager/: manifest.json
altmanager/templates/altmanager/: manage.html  menu.html  missing.html  missing_alliance.html  (+4 more)
frontend/: copy-assets.sh  index.html  package.json  vite.config.js
frontend/src/: index.js  index.jsx
tests/: test_settings.py  urls.py
(+19 files in other folders)
